# GtkPacker

./: README.md  dev.wszqkzqk.gtkpacker.json  meson.build
data/: dev.wszqkzqk.gtkpacker.appdata.xml.in  dev.wszqkzqk.gtkpacker.desktop.in  dev.wszqkzqk.gtkpacker.gschema.xml  meson.build
data/icons/: meson.build
po/: Makevars  POTFILES  gtkpacker.pot  meson.build  zh.po  zh_CN.po
src/: application.vala  gtkpacker.gresource.xml  main.vala  mainwindow.vala  meson.build  packer.vala  version.vala.in  window.ui  window.vala
